--- a/css/sass/pages/_login.scss
+++ b/css/sass/pages/_login.scss
@@ -8,7 +8,7 @@
   background-position: center;
   position: relative;
   .go-back {
-    position: absolute;
+    position: fixed;
     top: 30px;
     left: 30px;
     border: 1px solid #fff;
@@ -21,8 +21,7 @@
     height: 40px;
     z-index: 100;
     @media only screen and (max-width: 768px) {
-      top: auto;
-      bottom: 30px;
+      top: calc(100vh - 75px) !important;
     }
     .fa-long-arrow-alt-left {
       color: #fff;
