--- a/css/COMPILED-PAGES/login.css
+++ b/css/COMPILED-PAGES/login.css
@@ -8473,8 +8473,7 @@ body {
     width: 0px !important; } }
 .login-container {
   width: 100%;
-  height: 100vh;
-  min-height: 100vh;
+  height: 100%;
   background-size: cover;
   background-position: center;
   position: relative; }
@@ -8504,6 +8503,7 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
+    min-height: 700px;
     margin: auto;
     justify-content: center;
     align-items: center;
