--- a/css/sass/pages/_login.scss
+++ b/css/sass/pages/_login.scss
@@ -1,8 +1,6 @@
 .login-container {
   width: 100%;
-  height: 100vh;
-  min-height: 100vh;
-
+  height: 100%;
   background-size: cover;
   //background-attachment: fixed;
   background-position: center;
@@ -36,6 +34,7 @@
     display: flex;
     width: 100%;
     height: 100%;
+    min-height: 700px;
     margin: auto;
     justify-content: center;
     align-items: center;
