--- a/css/COMPILED-PAGES/login.css
+++ b/css/COMPILED-PAGES/login.css
@@ -8474,6 +8474,7 @@ body {
 .login-container {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   background-size: cover;
   background-position: center;
   position: relative; }
@@ -8503,7 +8504,7 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
-    min-height: 700px;
+    min-height: 600px;
     margin: auto;
     justify-content: center;
     align-items: center;
