--- a/css/sass/pages/_login.scss
+++ b/css/sass/pages/_login.scss
@@ -1,6 +1,7 @@
 .login-container {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   background-size: cover;
   //background-attachment: fixed;
   background-position: center;
@@ -34,7 +35,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    min-height: 700px;
+    min-height: 600px;
     margin: auto;
     justify-content: center;
     align-items: center;
