--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -116,3 +116,29 @@
   justify-content: center;
   align-items: center;
 }
+
+.go-back {
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  border: 1px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  z-index: 100;
+  @media only screen and (max-width: 768px) {
+    top: calc(100vh - 50px) !important;
+  }
+  .fa-long-arrow-alt-left {
+    color: #fff;
+    font-size: 22px;
+    font-weight: bold;
+  }
+  &:hover {
+    opacity: 0.5;
+  }
+}
