--- a/css/sass/style.css
+++ b/css/sass/style.css
@@ -195,6 +195,29 @@
   justify-content: center;
   align-items: center; }
 
+.go-back {
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  border: 1px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  z-index: 100; }
+  @media only screen and (max-width: 768px) {
+    .go-back {
+      top: calc(100vh - 50px) !important; } }
+  .go-back .fa-long-arrow-alt-left {
+    color: #fff;
+    font-size: 22px;
+    font-weight: bold; }
+  .go-back:hover {
+    opacity: 0.5; }
+
 hr {
   display: block;
   margin-top: 0.5em;
