--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -251,12 +251,14 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
   .service-box {
     @include prefixer(animation, fadeInOut 3s infinite linear, webkit moz);
     border: 1px solid #fff;
-    color: #fff;
+    color: #000;
     font-weight: bold;
     padding: 0.5rem;
     min-height: 200px;
     position: relative;
     height: auto;
+    opacity: 1 !important;
+    background-color: white;
     &:hover {
       background-color: #fff;
       color: #000;
@@ -393,7 +395,7 @@ $head-with-border-bg: linear-gradient(to right, #232526, #414345);
       width: 100%;
       height: 300px;
       &:hover {
-        @include prefixer(animation, fadeInOut 3s infinite linear, webkit moz);
+        //@include prefixer(animation, fadeInOut 3s infinite linear, webkit moz);
       }
       @media only screen and (max-width: 768px) {
         height: 200px;
